新增接口文件和通用工具文件

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>mytsapp</title>
+    <link rel="stylesheet" type="text/css" href="<%= BASE_URL %>index.css">
+    <title><%= VUE_APP_TITLE %></title>
   </head>
   <body>
     <noscript>
@@ -13,5 +14,28 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <div class="msg-tips" id="msg-tpl">
+      <span class="msg-close">&times;</span>
+      <div class="msg-content">
+      </div>
+      <div class="progress-div"></div>
+    </div>
+    <div class="msg-container"></div>
+    <!-- 信息confirm框模板 -->
+    <div class="dap-wrap" id="confirmMD" style="display: none">
+      <div class="confirm">
+        <div class="confirm-header">
+          <div class="cancel">×</div>
+          <div class="confirm-header-content">提示</div>
+        </div>
+        <div class="confirm-content-wrap">
+          <div class="confirm-content"></div>
+        </div>
+        <div class="confirm-button">
+          <div class="confirm-cancel">取消</div>
+          <div class="confirm-ok">确认</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
